JPA storage can return list of all artifacts
